<resources>
    <string name="app_name">SeminarDAM_Teme</string>
    <string name="lbl_wtxt">Welcome</string>
    <string name="lbl_register"><b>Create account.</b> New to Amazon?</string>
    <string name="lbl_phone">Mobile number or email</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_password">Create a password</string>
    <string name="lbl_showpass">Show Password</string>
    <string name="lbl_continueBtn">Continue</string>
    <string name="inf_tac">By creating an account, you agree to Amazon\'s <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=GLSBYFE9MGKKQXXM">Conditions of Use</a> and <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=GX7NJQ4ZB8MHFRNJ">Privacy Notice</a>.</string>
    <string name="lbl_signin"><b>Sign-In.</b> Already a customer?</string>
    <string name="lbl_phem">Email (phone for mobile accounts)</string>
    <string name="inf_tac2">By continuing, you agree to Amazon\'s <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=GLSBYFE9MGKKQXXM">Conditions of Use</a> and <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=GX7NJQ4ZB8MHFRNJ">Privacy Notice</a>.</string>
    <string name="tvHelp">Need help?</string>
    <string name="lnk_conditions_of_use"><a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=GLSBYFE9MGKKQXXM">Conditions of Use</a></string>
    <string name="lnk_privacy_notice"><a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=GX7NJQ4ZB8MHFRNJ">Privacy Notice</a></string>
    <string name="lnk_help"><a href="https://www.amazon.com/gp/help/customer/display.html">Help</a></string>
    <string name="str_copyright">© 1996–2021, Amazon.com, Inc. or its Affiliates</string>
    <string name="str_opt_forgot_pass">Forgot your password?</string>
    <string name="str_opt_other">Other issues with Sign-In</string>
    <string name="lbl_signin_btn">Sign In!</string>
    <string name="desc_logo_amazon">Logo Amazon</string>
    <string name="str_login_msg">Log in to Amazon</string>
    <string name="lbl_pass2">Your password</string>
    <string name="acc_create_res">Create Your Amazon Account</string>
    <string name="lbl_dob">Choose your Date of Birth:</string>
    <string name="acc_cfm_pwd">Confirm password</string>
    <string name="lbl_country">Choose your country:</string>
    <string name="acc_create_btn">Register</string>
    <string name="str_age_and_locale_display">%1$d years old, from %2$s</string>
    <string name="str_fmt_email"><b>E-mail:</b> %1$s</string>
    <string name="str_fmt_phone"><b>Tel.:</b> %1$s</string>
    <string name="str_shop_btn">Shop Now!</string>
    <string name="str_store_msg">Browse our store housing over %1$d products!</string>
    <string name="hint_srch">Search by name, tags and more!</string>
    <string name="str_price_min">Min price</string>
    <string name="str_price_max">Max price</string>
    <string name="str_btn_checkout">Checkout</string>
    <string name="str_add_to_cart">Add to Cart</string>
    <string name="fmt_pret">&lt;b>Pret: &lt;/b>%.2f</string>
    <string name="fmt_desc">&lt;b>"&lt;/b>%1$s&lt;b>"&lt;/b></string>
    <string name="str_loading_p">Loading product list, please wait…</string>
    <string name="fmt_status_li_default">%1$d&lt;b> / &lt;/b>%2$d</string>
    <string name="fmt_status_li_percent">%1$d&lt;b>%%&lt;/b></string>
    <string name="str_identical_user_err">ERROR: An account using this email address/phone number already exists</string>
    <string name="str_invalid_cred_err">ERROR: Invalid credentials!</string>
    <string name="str_invalid_em_ph_err">Please input a valid email address or phone number.</string>
    <string name="str_min_chars_req_err">Minimum %1$d characters required!</string>
    <string name="str_phone_email_prompt">Please input your email address or phone number!</string>
    <string name="str_pwd_prompt">Please input your password!</string>
    <string name="str_api_fail_err">Loading from API failed... Populating list with default values.</string>
</resources>