<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_title"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:background="@drawable/bg_gradient_title"
        android:cropToPadding="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/zzz" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/gradient_line_sep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/acc_create_res"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="603dp"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        tools:layout_editor_absoluteX="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNewAccountName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/basic_whitebox"
                android:backgroundTint="@android:color/transparent"
                android:backgroundTintMode="add"
                android:ems="10"
                android:fontFamily="@font/amazon_ember_family"
                android:hint="@string/lbl_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textColorHint="@color/silver_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/etNewAccountPhoneEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/basic_whitebox"
                android:backgroundTint="@android:color/transparent"
                android:backgroundTintMode="add"
                android:ems="10"
                android:fontFamily="@font/amazon_ember_family"
                android:hint="@string/lbl_phone"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textColorHint="@color/silver_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNewAccountName"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etNewAccountPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/basic_whitebox"
                android:backgroundTint="@android:color/transparent"
                android:backgroundTintMode="add"
                android:ems="10"
                android:fontFamily="@font/amazon_ember_family"
                android:hint="@string/lbl_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textColorHint="@color/silver_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNewAccountPhoneEmail" />

            <EditText
                android:id="@+id/etNewAccountPasswordCfm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/basic_whitebox"
                android:backgroundTint="@android:color/transparent"
                android:backgroundTintMode="add"
                android:ems="10"
                android:fontFamily="@font/amazon_ember_family"
                android:hint="@string/acc_cfm_pwd"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textColorHint="@color/silver_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNewAccountPassword" />

            <CheckBox
                android:id="@+id/cbShowNewAccPasswd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:button="@null"
                android:buttonTintMode="add"
                android:drawableStart="@drawable/basic_checkbox"
                android:drawablePadding="10dp"
                android:fontFamily="@font/amazon_ember"
                android:text="@string/lbl_showpass"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNewAccountPasswordCfm" />

            <CalendarView
                android:id="@+id/cdDateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:dateTextAppearance="@style/CalenderViewDateCustomText"
                android:focusedMonthDateColor="@color/black"
                android:theme="@style/CalenderViewCustom"
                android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/amazon_ember_family"
                android:text="@string/lbl_dob"
                app:layout_constraintEnd_toStartOf="@+id/tvCdErr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbShowNewAccPasswd" />

            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/basic_whitebox"
                android:popupBackground="@drawable/bg_gradient_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegisterNewAcc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/golden_button"
                android:fontFamily="@font/amazon_ember"
                android:text="@string/acc_create_btn"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countrySpinner" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/lbl_country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cdDateOfBirth" />

            <TextView
                android:id="@+id/tvCdErr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/fire_700"
                app:layout_constraintBottom_toTopOf="@+id/cdDateOfBirth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/cbShowNewAccPasswd" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>